--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "react-tracked",
   "description": "Simple and fast global state with React Context. Eliminate unnecessary re-renders without hassle.",
-  "version": "1.3.0",
+  "version": "2.0.0-alpha.0-wip",
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
     "url": "https://github.com/dai-shi/react-tracked.git"
   },
   "homepage": "https://react-tracked.js.org",
+  "source": "./src/index.ts",
   "main": "./dist/index.js",
-  "module": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "module": "./dist/index.esm.js",
+  "browser": "./dist/index.umd.js",
+  "types": "./dist/src/index.d.ts",
   "sideEffects": false,
   "files": [
     "src",
     "dist"
   ],
   "scripts": {
-    "compile": "babel src -d dist",
+    "compile": "microbundle build --format cjs,es,umd",
     "test": "run-s eslint tsc-test jest e2e-test:*",
     "eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore --ignore-pattern dist .",
-    "jest": "jest __tests__/*.js",
+    "jest": "jest --preset ts-jest/presets/js-with-ts __tests__/*.tsx",
     "tsc-test": "tsc --project . --noEmit",
     "e2e-test:01_minimal": "server-test examples:01_minimal 8080 'jest --preset jest-puppeteer __tests__/e2e/01_minimal.js'",
     "e2e-test:02_typescript": "server-test examples:02_typescript 8080 'jest --preset jest-puppeteer __tests__/e2e/02_typescript.js'",
@@ -56,18 +58,17 @@
     "hooks"
   ],
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "proxy-compare": "^1.0.1"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
     "@testing-library/react": "^9.5.0",
+    "@types/jest": "^25.1.4",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/scheduler": "^0.16.1",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
-    "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
@@ -78,12 +79,14 @@
     "immer": "^6.0.1",
     "jest": "^25.1.0",
     "jest-puppeteer": "^4.4.0",
+    "microbundle": "^0.12.0-next.8",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^2.1.1",
     "react": "experimental",
     "react-dom": "experimental",
     "redux-saga": "^1.1.3",
     "start-server-and-test": "^1.10.8",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "use-reducer-async": "^2.0.0",
@@ -93,27 +96,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "env": {
-      "test": {
-        "presets": [
-          [
-            "@babel/preset-env",
-            {
-              "targets": {
-                "node": "current"
-              }
-            }
-          ],
-          "@babel/preset-react"
-        ]
-      }
-    }
+    "react": ">=16.8.0",
+    "scheduler": ">=16.8.0"
   }
 }
