--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tracked",
   "description": "Simple and fast global state with React Context. Eliminate unnecessary re-renders without hassle.",
-  "version": "2.0.0-alpha.0-wip",
+  "version": "2.0.0-alpha.1",
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
