--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-tracked",
   "description": "Simple and fast global state with React Context. Eliminate unnecessary re-renders without hassle.",
   "version": "2.0.0-alpha.3",
+  "publishConfig": {
+    "tag": "next"
+  },
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
