force install puppeteer 2

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore --ignore-pattern dist .",
     "jest": "jest --preset ts-jest/presets/js-with-ts --env jsdom __tests__/*.tsx",
     "tsc-test": "tsc --project . --noEmit",
-    "prepare-e2e": "pnpm install puppeteer",
+    "prepare-e2e": "npm install puppeteer",
     "e2e-test:01_minimal": "server-test examples:01_minimal 8080 'jest --preset jest-puppeteer __tests__/e2e/01_minimal.ts'",
     "e2e-test:02_typescript": "server-test examples:02_typescript 8080 'jest --preset jest-puppeteer __tests__/e2e/02_typescript.ts'",
     "e2e-test:03_usestate": "server-test examples:03_usestate 8080 'jest --preset jest-puppeteer __tests__/e2e/03_usestate.ts'",
@@ -103,7 +103,7 @@
     "jest-puppeteer": "^9.0.0",
     "microbundle": "^0.15.1",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^20.7.3",
+    "puppeteer-core": "^20.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "redux-saga": "^1.2.3",
