force install puppeteer 3

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "react/jsx-one-expression-per-line": "off",
     "import/extensions": ["error", "never"],
     "import/prefer-default-export": "off",
-    "import/no-unresolved": ["error", { "ignore": ["react-tracked", "puppeteer"] }],
+    "import/no-unresolved": ["error", { "ignore": ["react-tracked"] }],
     "no-param-reassign": "off",
     "no-plusplus": "off",
     "no-bitwise": "off",
