--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
   "scripts": {
     "compile": "microbundle build -f modern,umd --globals react=React --no-compress",
     "postcompile": "cp dist/index.modern.mjs dist/index.modern.js && cp dist/index.modern.mjs.map dist/index.modern.js.map",
-    "test": "run-s eslint tsc-test jest prepare-e2e e2e-test:*",
+    "test": "run-s eslint tsc-test jest e2e-test:*",
     "eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore --ignore-pattern dist .",
     "jest": "jest --preset ts-jest/presets/js-with-ts --env jsdom __tests__/*.tsx",
     "tsc-test": "tsc --project . --noEmit",
-    "prepare-e2e": "test -z $CI || node node_modules/puppeteer/install.js || true",
     "e2e-test:01_minimal": "server-test examples:01_minimal 8080 'jest --preset jest-puppeteer __tests__/e2e/01_minimal.ts'",
     "e2e-test:02_typescript": "server-test examples:02_typescript 8080 'jest --preset jest-puppeteer __tests__/e2e/02_typescript.ts'",
     "e2e-test:03_usestate": "server-test examples:03_usestate 8080 'jest --preset jest-puppeteer __tests__/e2e/03_usestate.ts'",
