--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore --ignore-pattern dist .",
     "jest": "jest --preset ts-jest/presets/js-with-ts --env jsdom __tests__/*.tsx",
     "tsc-test": "tsc --project . --noEmit",
-    "prepare-e2e": "test -z $CI || node node_modules/puppeteer/install.js || true",
+    "prepare-e2e": "test -z $CI || node node_modules/puppeteer/install.mjs",
     "e2e-test:01_minimal": "server-test examples:01_minimal 8080 'jest --preset jest-puppeteer __tests__/e2e/01_minimal.ts'",
     "e2e-test:02_typescript": "server-test examples:02_typescript 8080 'jest --preset jest-puppeteer __tests__/e2e/02_typescript.ts'",
     "e2e-test:03_usestate": "server-test examples:03_usestate 8080 'jest --preset jest-puppeteer __tests__/e2e/03_usestate.ts'",
