breaking: make it compatible with memo and react compiler (#202)
* reuse affected if the state is not changed from the previous one

* update snapshot

* per-hook affected

* remove memo

* update docs

* v2.0.0-beta.1

* v2.0.0-beta.2

* v2.0.0-beta.3

* update CHANGELOG

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "react-tracked",
   "description": "State usage tracking with Proxies. Optimize re-renders for useState/useReducer, React Redux, Zustand and others.",
-  "version": "1.7.14",
+  "version": "2.0.0-beta.3",
+  "publishConfig": {
+    "tag": "next"
+  },
   "author": "Daishi Kato",
   "repository": {
     "type": "git",
