--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "happy-dom": "^14.7.1",
+    "immer": "^10.1.1",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
