--- a/package.json
+++ b/package.json
@@ -43,8 +43,23 @@
     "test:lint": "eslint .",
     "test:types": "tsc -p . --noEmit",
     "test:types:examples": "tsc -p examples --noEmit",
-    "test:spec": "vitest run",
-    "text:e2e": "echo 'TODO'",
+    "test:spec": "vitest run --project=spec",
+    "test:e2e": "run-s e2e:*",
+    "e2e:01_counter": "server-test examples:01_counter http://localhost:8080 'vitest run --project=e2e 01_counter'",
+    "e2e:02_person": "server-test examples:02_person http://localhost:8080 'vitest run --project=e2e 02_person'",
+    "e2e:03_setstate": "server-test examples:03_setstate http://localhost:8080 'vitest run --project=e2e 03_setstate'",
+    "e2e:04_selector": "server-test examples:04_selector http://localhost:8080 'vitest run --project=e2e 04_selector'",
+    "e2e:05_container": "server-test examples:05_container http://localhost:8080 'vitest run --project=e2e 05_container'",
+    "e2e:06_customhook": "server-test examples:06_customhook http://localhost:8080 'vitest run --project=e2e 06_customhook'",
+    "e2e:07_todolist": "server-test examples:07_todolist http://localhost:8080 'vitest run --project=e2e 07_todolist'",
+    "e2e:08_comparison": "server-test examples:08_comparison http://localhost:8080 'vitest run --project=e2e 08_comparison'",
+    "e2e:09_reactmemo": "server-test examples:09_reactmemo http://localhost:8080 'vitest run --project=e2e 09_reactmemo'",
+    "e2e:10_untracked": "server-test examples:10_untracked http://localhost:8080 'vitest run --project=e2e 10_untracked'",
+    "e2e:11_form": "server-test examples:11_form http://localhost:8080 'vitest run --project=e2e 11_form'",
+    "e2e:12_async": "server-test examples:12_async http://localhost:8080 'vitest run --project=e2e 12_async'",
+    "e2e:13_saga": "server-test examples:13_saga http://localhost:8080 'vitest run --project=e2e 13_saga'",
+    "e2e:14_dynamic": "server-test examples:14_dynamic http://localhost:8080 'vitest run --project=e2e 14_dynamic'",
+    "e2e:15_reactmemoref": "server-test examples:15_reactmemoref http://localhost:8080 'vitest run --project=e2e 15_reactmemoref'",
     "examples:01_counter": "DIR=01_counter vite",
     "examples:02_person": "DIR=02_person vite",
     "examples:03_usestate": "DIR=03_usestate vite",
@@ -93,10 +108,13 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "happy-dom": "^14.7.1",
     "immer": "^10.1.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
+    "puppeteer": "^22.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "redux-saga": "^1.3.0",
+    "start-server-and-test": "^2.0.3",
     "ts-expect": "^1.3.0",
     "typescript": "^5.4.5",
     "use-reducer-async": "^2.1.1",
