--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "test:types": "tsc -p . --noEmit",
     "test:types:examples": "tsc -p examples --noEmit",
     "test:spec": "vitest run --project=spec",
-    "test:e2e": "run-s e2e:*",
+    "test:e2e": "run-s prepare-e2e e2e:*",
+    "prepare-e2e": "test -z $CI || node node_modules/puppeteer/install.mjs",
     "e2e:01_counter": "server-test examples:01_counter http://localhost:8080 'vitest run --project=e2e 01_counter'",
     "e2e:02_person": "server-test examples:02_person http://localhost:8080 'vitest run --project=e2e 02_person'",
     "e2e:03_usestate": "server-test examples:03_usestate http://localhost:8080 'vitest run --project=e2e 03_usestate'",
