--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tracked",
   "description": "State usage tracking with Proxies. Optimize re-renders for useState/useReducer, React Redux, Zustand and others.",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0-rc.0",
   "publishConfig": {
     "tag": "next"
   },
