--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "start": "docusaurus start",
+    "serve": "docusaurus serve",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy"
