--- a/package.json
+++ b/package.json
@@ -89,17 +89,17 @@
   },
   "dependencies": {
     "proxy-compare": "^3.0.0",
-    "use-context-selector": "^2.0.0-beta.0"
+    "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.5",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.6",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -107,11 +107,11 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "happy-dom": "^14.7.1",
+    "happy-dom": "^14.9.0",
     "immer": "^10.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
-    "puppeteer": "^22.7.1",
+    "puppeteer": "^22.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "redux-saga": "^1.3.0",
@@ -120,8 +120,8 @@
     "typescript": "^5.4.5",
     "use-reducer-async": "^2.1.1",
     "use-saga-reducer": "^3.0.0",
-    "vite": "^5.2.10",
-    "vitest": "^1.5.2"
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
