--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "puppeteer": "^22.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tracked": "link:.",
     "redux-saga": "^1.3.0",
     "start-server-and-test": "^2.0.3",
     "ts-expect": "^1.3.0",
