new proxy-compare

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "proxy-compare": "^3.0.0",
+    "proxy-compare": "https://pkg.csb.dev/dai-shi/proxy-compare/commit/42bb1fee/proxy-compare",
     "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
