chore(.github/workflows/cd.yml): change 'npm test' to 'pnpm test'

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,8 +18,8 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: '**/pnpm-lock.yaml'
       - run: pnpm install --frozen-lockfile
-      - run: npm test
-      - run: npm run compile
-      - run: npm publish
+      - run: pnpm test
+      - run: pnpm compile
+      - run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
