chore(eslint): migrate to eslint 9 flat config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "react-tracked": ["./src/index.js"]
+      "react-tracked": ["./src/index.ts"]
     }
   },
   "exclude": ["dist", "examples"]
