--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "src",
     "dist"
   ],
-  "packageManager": "pnpm@8.15.0",
+  "packageManager": "pnpm@9.4.0",
   "scripts": {
     "compile": "rm -rf dist && pnpm run '/^compile:.*/'",
     "compile:esm": "tsc -p tsconfig.esm.json",
@@ -85,41 +85,41 @@
     "singleQuote": true
   },
   "dependencies": {
-    "proxy-compare": "^3.0.0",
+    "proxy-compare": "^3.0.1",
     "use-context-selector": "^2.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.6",
+    "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "happy-dom": "^14.9.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "happy-dom": "^16.3.0",
     "immer": "^10.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "puppeteer": "^22.8.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-tracked": "link:.",
+    "prettier": "^3.4.2",
+    "puppeteer": "^23.11.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-tracked": "link:",
     "redux-saga": "^1.3.0",
-    "start-server-and-test": "^2.0.3",
+    "start-server-and-test": "^2.0.9",
     "ts-expect": "^1.3.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0",
     "use-reducer-async": "^2.1.1",
     "use-saga-reducer": "^3.0.0",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0"
+    "vite": "^6.0.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
