--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
+    "eslint-plugin-react-hooks": "5.2.0-canary-de1eaa26-20250124",
     "happy-dom": "^16.7.2",
     "immer": "^10.1.1",
     "npm-run-all": "^4.1.5",
